<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
                android:fontFamily="@font/droid_arabic_kufi"
        android:textColor="@color/blackColor"
        android:id="@+id/txt_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        style="@style/FontSizeFifteen" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/layout_rect_green_rounded"
            android:text="@string/Yes"
            style="@style/FontSizeFourteen"
            android:textColor="@color/whiteColor" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/layout_rect_red_rounded"
            android:text="@string/No"
            style="@style/FontSizeFourteen"
            android:textColor="@color/whiteColor" />

        <Button
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:id="@+id/btn_wait"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/layout_rect_black_rounded"
            android:text="@string/PutInWait"
            style="@style/FontSizeFourteen"
            android:textColor="@color/whiteColor" />

    </LinearLayout>

</LinearLayout>