<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/tripNoTextView"
            style="@style/FontSizeSeventeen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:textAlignment="center"
            android:textColor="@color/lightBlueColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subjectTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/Subject" />

        <TextView
            android:id="@+id/shipmentTitleTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/Shipment"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:id="@+id/shipmentTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:textAlignment="viewStart"
            android:textColor="@color/darkest_gray" />

        <TextView
            android:id="@+id/vehicleTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/Size" />

        <TextView
            android:id="@+id/estimatedTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/EstimatedPrice"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:id="@+id/estimatedValueTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:textColor="@color/darkest_gray" />

        <TextView
            style="@style/FontSizeFifteen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/LaboursRequired"
            android:textColor="@color/lightBlueColor" />
        <TextView
            android:id="@+id/loading_labour_count"
            style="@style/FontSizeFifteen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/LaboursRequired"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:id="@+id/unloading_labour_count"
            style="@style/FontSizeFifteen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/LaboursRequired"
            android:textColor="@color/lightBlueColor" />

<!--        <TextView-->
<!--            android:id="@+id/workersRequiredValueTextView"-->
<!--            style="@style/FontSizeFifteen"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:fontFamily="@font/droid_arabic_kufi"-->
<!--            android:textColor="@color/darkest_gray" />-->

        <TextView
            android:id="@+id/installationRequiredTitle"
            style="@style/FontSizeFifteen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/RequireInstalment"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:id="@+id/installationRequiredValue"
            style="@style/FontSizeFifteen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:textColor="@color/darkest_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/darkest_gray" />

        <TextView
            style="@style/FontSizeSixteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/SenderDetails"
            android:textColor="@color/lightBlueColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/fromNameTitleTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:text="@string/Name"
                android:textColor="@color/lightBlueColor" />

            <TextView
                android:id="@+id/fromMobTitleTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:text="@string/Mobile"
                android:textColor="@color/lightBlueColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/fromNameTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:textAlignment="viewStart"
                android:textColor="@color/darkest_gray" />

            <TextView
                android:id="@+id/fromMobTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:textColor="@color/darkest_gray" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/darkest_gray" />


        <TextView
            style="@style/FontSizeSixteen"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/DateAndTime"
            android:textColor="@color/lightBlueColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/engDateTitleTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:text="@string/DateEn"
                android:textColor="@color/lightBlueColor" />

            <TextView
                android:id="@+id/arDateTitleTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:text="@string/DateAr"
                android:textColor="@color/lightBlueColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/engDateTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:textColor="@color/darkest_gray" />

            <TextView
                android:id="@+id/arDateTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:textColor="@color/darkest_gray" />

        </LinearLayout>

        <TextView
            android:id="@+id/timeTitleTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/Time"
            android:textAlignment="viewStart"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:id="@+id/timeTextView"
            style="@style/FontSizeFifteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:textColor="@color/darkest_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/darkest_gray" />

        <TextView
            style="@style/FontSizeSixteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/droid_arabic_kufi"
            android:text="@string/ReceiverDetails"
            android:textColor="@color/lightBlueColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/toNameTitleTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:text="@string/Name"
                android:textColor="@color/lightBlueColor" />

            <TextView
                android:id="@+id/toMobTitleTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:text="@string/Mobile"
                android:textColor="@color/lightBlueColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/toNameTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:textAlignment="viewStart"
                android:textColor="@color/darkest_gray" />

            <TextView
                android:id="@+id/toMobTextView"
                style="@style/FontSizeFifteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/droid_arabic_kufi"
                android:textColor="@color/darkest_gray" />

        </LinearLayout>

        <Button
            android:id="@+id/editTripButton"
            style="@style/FontSizeSixteen"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#657D94"
            android:text="@string/EditOrder"
            android:textColor="@color/whiteColor"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancelTripButton"
            style="@style/FontSizeSixteen"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            android:background="@color/redColor"
            android:text="@string/Cancel"
            android:textColor="@color/whiteColor"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>