<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/priceTextView"
            style="@style/FontSizeSeventeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="10"
            android:textColor="@color/lightBlueColor"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            style="@style/FontSizeFourteen"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/SAR"
            android:textAlignment="center"
            android:textColor="@color/darkest_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/FontSizeSixteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Date"
            android:textColor="@color/lightBlueColor" />

        <TextView
            android:id="@+id/dateTextView"
            style="@style/FontSizeSixteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="04/09/2018"
            android:textColor="@color/darkest_gray" />

    </LinearLayout>

    <Button
        android:id="@+id/detailsButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@drawable/layout_rect_white_lightblue"
        android:text="@string/Details"
        android:textColor="@color/lightBlueColor" />

    <View
        android:layout_width="15dp"
        android:layout_height="match_parent" />

</LinearLayout>